*SVN*

* Fix that Dates couldn't be subtracted from Dates after [5940].  [Sam Stephenson]

* Add Object#acts_like? and Time#acts_like_time? and Date#acts_like_date? to facilitate duck-typing. [Jamis Buck]

* Make 1.months and friends accurate by introducing a Duration class.  #6835 [eventualbuddha]

* Document Inflector.ordinalize and merge docs from String inflections.  #7023 [smeade]

* Unbundle flexmock.  [Jeremy Kemper]

* Fix Dependencies.autoloaded? to ignore anonymous modules. Closes #6561. [Nicholas Seckar]

* Update load once paths to prevent nested once constants from being detected and claimed by an external non-once load. [Nicholas Seckar]

* Deprecation: silence warnings when reporting test errors.  [Jeremy Kemper]

* Hash#slice(*keys) returns a new hash with only the given keys. #slice! replaces the hash with only the given keys. Works with HashWithIndifferentAccess also.  [Jeremy Kemper]

* HashWithIndifferentAccess#to_hash converts to a Hash with String keys and the same default value.  [Jeremy Kemper]

* Fix remove_constant to correctly handle constant names of the form "::A::...". References #6720. [Nicholas Seckar]

* Fixed Array#to_xml when it contains a series of hashes (each piece would get its own XML declaration) #6610 [thkarcher/cyu]

* Added Time#to_s(:time) which will just return H:M, like 17:44 [DHH]

* Add Module#attr_accessor_with_default to initialize value of attribute before setting it. Closes #6538. [Stuart Halloway, Marcel Molina Jr.]

* Hash#to_xml handles keys with the same name as Kernel methods.  #6613 [Catfish]

* Added Time#end_of_day to get 23:59:59 of that day [DHH]

* Don't quote hash keys in Hash#to_json if they're valid JavaScript identifiers.  Disable this with ActiveSupport::JSON.unquote_hash_key_identifiers = false if you need strict JSON compliance. [Sam Stephenson]

* Lazily load the Unicode Database in the UTF-8 Handler [Rick Olson]

* Update dependencies to delete partially loaded constants. [Nicholas Seckar]
